@@ -1,3 +1,10 @@
+2001-10-19  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* mkcheck.in (static_fail): Remove older memory limit functionality.
+	Disable E_TIME due to formatting issues.
+
+	* README: Update.
+	
 2001-10-19  Brendan Kehoe  <brendan@zen.org>
 
         * include/bits/std_complex.h: Default initialize second argument
